--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
 	<version>1.0.0</version>
 
 	<properties>
-		<spring-boot.version>1.5.3.RELEASE</spring-boot.version>
+		<spring-boot.version>2.1.4.RELEASE</spring-boot.version>
+		<spring-boot-admin.version>2.1.5</spring-boot-admin.version>
 		<start-class>de.metas.admin.SpringBootAdminApplication</start-class>
 	</properties>
 
